# Sentinel-Site

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-pulse.yml
bundles/: 2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  index.json
config/: sources.yaml
data/articles/: 2026-07.jsonl
data/feed/: 2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  latest.json
src/sentinel/: __init__.py  http_client.py  llm.py  normalize.py  run.py  sources.py  state.py  util.py
src/sentinel/analyzers/: __init__.py  bundle.py  feed.py
src/sentinel/collectors/: __init__.py  articles.py  browser.py  content.py  discover.py  html_links.py  llm_fallback.py  rss.py  sources.py
state/: sources.json
tests/: test_browser.py  test_content.py  test_incremental_articles.py  test_llm.py
