[project]
name = "sentinel"
version = "0.1.0"
description = "Daily blog/site article collector (Soundwave-style bundles for Megatron)"
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.27",
    "feedparser>=6.0",
    "openai>=1.40",
    "pyyaml>=6.0",
    "selectolax>=0.3.21",
    "certifi>=2024.0",
    "playwright>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]
